--- a/hostControlers.html
+++ b/hostControlers.html
@@ -143,7 +143,7 @@
                     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
                     <script type="text/javascript" src="http://arrow.scrolltotop.com/arrow44.js"></script>
 
-                    <span class="copyright">All Rights Recieved &copy; Stoyan Dimitrov 2016</span>
+                    <span class="copyright">All Rights Reserved &copy; Stoyan Dimitrov 2016</span>
                 </div>
             </div>
         </div>
